--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -5,6 +5,15 @@
     <ul class="right hide-on-med-and-down">
       <li><a href="sass.html">Taxonomy</a></li>
 
+      <% if user_signed_in? %>
+       <li><a href=/pages/geomap>Geomap</a></li>
+       <li><a href=/posts>Forum</a></li>
+       <li><a href=/pages/contact>Contact Us</a></li>
+       <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+       <% else %>
+      <li><%= link_to 'Login', new_user_session_path  %></li>
+     <% end %>
+
 
     </ul>
     <ul class="side-nav" id="mobile-demo">
