--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,3 +1,7 @@
+
+
+<!-- start of navbar -->
+
 <nav>
   <div class="nav-wrapper">
     <a href="#!" class="brand-logo">Logo</a>
@@ -9,7 +13,9 @@
        <li><a href=/pages/geomap>Geomap</a></li>
        <li><a href=/posts>Forum</a></li>
        <li><a href=/pages/contact>Contact Us</a></li>
-       <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+
+       <!-- dropdown trigger -->
+       <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= current_user.username %><i class="material-icons right">arrow_drop_down</i></a></li>
        <% else %>
       <li><%= link_to 'Login', new_user_session_path  %></li>
      <% end %>
@@ -24,3 +30,15 @@
     </ul>
   </div>
 </nav>
+
+<!-- dropdown structure -->
+<ul id="dropdown1" class="dropdown-content">
+ <li><a href="#!">Profile</a></li>
+ <li class="divider"></li>
+ <li>
+   <% if user_signed_in? %>
+   <%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+   <% else %>
+   <% end %></a>
+</li>
+</ul>
