added carrierwave to post

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,16 @@
  *= require_self
  */
 @import "materialize";
+
+.capitalize {
+  text-transform: capitalize !important;
+}
+
+.block-display {
+  margin: 0;
+    display: inline-block;
+}
+
+.flotation-right{
+  float: right;
+}
