--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,5 +1,3 @@
-
-
 <!-- start of navbar -->
 
 <nav>
@@ -15,7 +13,7 @@
        <li><a href=/pages/contact>Contact Us</a></li>
 
        <!-- dropdown trigger -->
-       <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= current_user.username %><i class="material-icons right">arrow_drop_down</i></a></li>
+       <li><a class="dropdown-button capitalize" href="#!" data-activates="dropdown1"><%= current_user.username %><i class="material-icons right">arrow_drop_down</i></a></li>
        <% else %>
       <li><%= link_to 'Login', new_user_session_path  %></li>
      <% end %>
