--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,35 +1,43 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h3 class="block-display">New Sighting</h3><a href=/posts/new class="btn-floating btn-medium waves-effect waves-light red flotation-right">
+  <i class="material-icons">add</i>
+</a>
+<p> Forum to discuss new sightings and realated questions regarding ticks with the community. </p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Host species</th>
-      <th>Description</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.host_species %></td>
-        <td><%= post.description %></td>
-        <td><%= post.latitude %></td>
-        <td><%= post.longitude %></td>
-        <td><%= post.user %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @posts.each do |post| %>
+<div class="col s12 m7">
+    <div class="card horizontal">
+        <div class="card-image">
+            <%= image_tag(post.post_image[0].url) %><br>
+        </div>
+        <div class="card-stacked">
+            <div class="card-content">
+                <p>
+                    <strong>Host Species:</strong>
+                    <%= post.host_species %></p>
+                <p>
+                    <strong>Description:</strong>
+                    <%= post.description %></p>
+                <p>
+                    <strong>Latitude:</strong>
+                    <%= post.latitude %></p>
+                <p>
+                    <strong>Longtitude:</strong>
+                    <%= post.longitude %></p>
+                </br>
+                <%= link_to 'Show', post %>|
+                <%= link_to 'Edit', edit_post_path(post) %>|
+                <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </div>
+        <div class="card-action">
+            <strong>Posted by:</strong>
+            <a href="#" class="capitalize"><%= post.user.username %>
+            </a>
 
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+        </div>
+    </div>
+</div>
+</div>
+<% end %>
