--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -22,9 +22,14 @@
     </ul>
     <ul class="side-nav" id="mobile-demo">
       <li><a href=#>Taxonomy</a></li>
-      <li><a href=/pages/geomap>Geomap</a></li>
-      <li><a href=/posts>Forum</a></li>
-      <li><a href=/pages/contact>Contact Us</a></li>
+        <% if user_signed_in? %>
+        <li><a href=/pages/geomap>Geomap</a></li>
+        <li><a href=/posts>Forum</a></li>
+        <li><a href=/pages/contact>Contact Us</a></li>
+        <%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+        <% else %>
+       <li><%= link_to 'Login', new_user_session_path  %></li>
+      <% end %>
     </ul>
   </div>
 </nav>
