added tick scaffold

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -8,6 +8,7 @@
       <li><a href="sass.html">Taxonomy</a></li>
 
       <% if user_signed_in? %>
+       <li><a href=/ticks>Ticks</a></li>
        <li><a href=/pages/geomap>Geomap</a></li>
        <li><a href=/posts>Forum</a></li>
        <li><a href=/pages/contact>Contact Us</a></li>
