--- a/app/views/pages/geomap.html.erb
+++ b/app/views/pages/geomap.html.erb
@@ -1,2 +1,9 @@
 <h1>Pages#geomap</h1>
 <p>Find me in app/views/pages/geomap.html.erb</p>
+
+
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+
+<%= render 'map', tick: @tick %>
