--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -33,3 +33,10 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<%= render 'comments/form', comment: @comment %>
+
+<% @comments.each do |comment| %>
+  <p><%= comment.user.email %> - <%= comment.created_at %></p>
+  <p><%= comment.content %></p>
+<% end %>
