--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="/javascripts/gmaps_google.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
-        <script src="//maps.google.com/maps/api/js?key=AIzaSyD0iWWAAF4JqQ6GA91u_tRED4woUPyo1vM"></script>
+        <script src="//maps.google.com/maps/api/js?key=<%=ENV['GOOGLEMAP_SECRET']%>"></script>
 
 
     </head>
