--- a/app/views/pages/_map.html.erb
+++ b/app/views/pages/_map.html.erb
@@ -1,6 +1,7 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
+
 <script>
   handler = Gmaps.build('Google');
   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
@@ -11,9 +12,8 @@
           "lat": <%= tick.latitude %>,
           "lng": <%= tick.longtitude %>,
           "picture": {
-            "url": "http://people.mozilla.com/~faaborg/files/shiretoko/firefoxIcon/firefox-32.png",
             "width":  32,
-            "height": 32
+            "height": 32,
           },
           "infowindow": "<%= tick.scientific_name %>"
         },
