--- a/app/views/pages/geomap.html.erb
+++ b/app/views/pages/geomap.html.erb
@@ -2,8 +2,7 @@
 <p>Find me in app/views/pages/geomap.html.erb</p>
 
 
-<div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
-</div>
+<div id="map" style='width: 100%; height: 400px;'>
 
 <%= render 'map', tick: @tick %>
+</div>
