--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(comment) do |f| %>
+<%= form_for([@post, comment]) do |f| %>
   <% if comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -11,8 +11,9 @@
     </div>
   <% end %>
 
+
   <div class="field">
-    <%= f.label :content %>
+    <%= f.label :content, "Comment" %>
     <%= f.text_area :content %>
   </div>
 
