--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,6 +23,9 @@
                       <strong>Description:</strong>
                       <%= post.description %></p>
                   <p>
+                    <strong>Location:</strong>
+                    <%= post.address %></p>
+                <p>
                       <strong>Latitude:</strong>
                       <%= post.latitude %></p>
                   <p>
@@ -32,7 +35,7 @@
               <%= link_to 'Show', post %>
               <% if current_user.admin? || post.user_id == current_user.id %>
               |<%= link_to 'Edit', edit_post_path(post) %>
-              |<%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+              |<%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
 
               <% end %>
           </div>
