--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,6 +17,11 @@
 </p>
 
 <p>
+  <strong>Location:</strong>
+  <%= @post.address %>
+</p>
+
+<p>
   <strong>Latitude:</strong>
   <%= @post.latitude %>
 </p>
@@ -26,17 +31,17 @@
   <%= @post.longitude %>
 </p>
 
-<p>
-  <strong>User:</strong>
-  <%= @post.user.username %>
-</p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<% if current_user.admin? || @post.user_id == current_user.id %>
+<%= link_to 'Edit', edit_post_path(@post) %>
+|<%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+<% end %>
 
 <%= render 'comments/form', comment: @comment %>
 
 <% @comments.each do |comment| %>
-  <p><%= comment.user.email %> - <%= comment.created_at %></p>
-  <p><%= comment.content %></p>
+  <p><%= comment.user.username %>: <%= comment.content %></p>
+  <p><%= comment.created_at %></p>
+<p> ======================== </p>
 <% end %>
