--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -5,12 +5,13 @@
     <a href="#!" class="brand-logo">Logo</a>
     <a href="" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Taxonomy</a></li>
+
 
       <% if user_signed_in? %>
           <% if current_user.admin? %>
-          <li><a href='/ticks'>Ticks</a></li>
+          <li><a href='/ticks/new'>Add Ticks</a></li>
           <% end %>
+       <li><a href='/ticks'>Taxonomy</a></li>
        <li><a href='/pages/geomap' data-turbolinks="false">Geomap</a></li>
        <li><a href='/posts'>Forum</a></li>
        <li><a href='/pages/contact'>Contact Us</a></li>
