--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -5,8 +5,6 @@
     <a href="#!" class="brand-logo">Logo</a>
     <a href="" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-
-
       <% if user_signed_in? %>
           <% if current_user.admin? %>
           <li><a href='/ticks/new'>Add Ticks</a></li>
@@ -25,8 +23,11 @@
 
     </ul>
     <ul class="side-nav" id="mobile-demo">
-      <li><a href=#>Taxonomy</a></li>
         <% if user_signed_in? %>
+          <% if current_user.admin? %>
+          <li><a href='/ticks/new'>Add Ticks</a></li>
+          <% end %>
+        <li><a href='/ticks'>Taxonomy</a></li>
         <li><a href='/pages/geomap'>Geomap</a></li>
         <li><a href='/posts'>Forum</a></li>
         <li><a href='/pages/contact'>Contact Us</a></li>
