--- a/app/views/ticks/index.html.erb
+++ b/app/views/ticks/index.html.erb
@@ -12,44 +12,50 @@
 
 <h1>Ticks</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Common name</th>
-      <th>Scientific name</th>
-      <th>Host species</th>
-      <th>Common parasites</th>
-      <th>Pathogenic effect</th>
-      <th>Morphology</th>
-      <th>Description</th>
-      <th>Control measures</th>
-      <th>Latitude</th>
-      <th>Longtitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% @ticks.each do |tick| %>
+<div class="col s12 m7">
+      <div class="card horizontal">
+        <div class="card-image">
+          <%= image_tag(tick.tick_image[0].url) %><br>
+        </div>
+          <div class="card-stacked">
+              <div class="card-content">
+                  <p>
+                      <strong>Common name:</strong>
+                      <%= tick.common_name %></p>
 
-  <tbody>
-    <% @ticks.each do |tick| %>
-      <tr>
-        <td><%= tick.common_name %></td>
-        <td><%= tick.scientific_name %></td>
-        <td><%= tick.host_species %></td>
-        <td><%= tick.common_parasites %></td>
-        <td><%= tick.pathogenic_effect %></td>
-        <td><%= tick.morphology %></td>
-        <td><%= tick.description %></td>
-        <td><%= tick.control_measures %></td>
-        <td><%= tick.latitude %></td>
-        <td><%= tick.longtitude %></td>
-          <% if current_user.admin? %>
-        <td><%= link_to 'Show', tick %></td>
-        <td><%= link_to 'Edit', edit_tick_path(tick) %></td>
-        <td><%= link_to 'Delete', tick, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                  <p>
+                      <strong>Scientific name:</strong>
+                      <%= tick.scientific_name %></p>
 
-<br>
+                  <p>
+                      <strong>Host species:</strong>
+                      <%= tick.host_species %></p>
+
+                  <p>
+                      <strong>Common parasites:</strong>
+                      <%= tick.common_parasites %></p>
+                  <p>
+                    <strong>Pathogenic Effect:</strong>
+                    <%= tick.pathogenic_effect %></p>
+                <p>
+                  <strong>Morphology:</strong>
+                  <%= tick.morphology %></p>
+              <p>
+                      <strong>Description:</strong>
+                      <%= tick.description %></p>
+                  <p>
+                    <strong>Control measures:</strong>
+                    <%= tick.control_measures %></p>
+
+                  </br>
+                  <%= link_to 'Show', tick %>
+                  <% if current_user.admin? %>
+                  |<%= link_to 'Edit', edit_tick_path(tick)%>
+                  |<%= link_to 'Delete', tick, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  <% end %>
+              </div>
+            </div>
+          </div>
+          <% end %>
+        </div>
