--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -9,6 +9,7 @@
           <% if current_user.admin? %>
           <li><a href='/ticks/new'>Add Ticks</a></li>
           <% end %>
+      <li><a href='/conversations'>Inbox</a></li>
        <li><a href='/ticks'>Taxonomy</a></li>
        <li><a href='/pages/geomap' data-turbolinks="false">Geomap</a></li>
        <li><a href='/posts'>Forum</a></li>
