--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -12,7 +12,7 @@
        <li><a href='/ticks'>Taxonomy</a></li>
        <li><a href='/pages/geomap' data-turbolinks="false">Geomap</a></li>
        <li><a href='/posts'>Forum</a></li>
-       <li><a href='/pages/contact'>Contact Us</a></li>
+       <li><a href='/contact'>Contact Us</a></li>
 
        <!-- dropdown trigger -->
        <li><a class="dropdown-button capitalize" href="#!" data-activates="dropdown1"><%= current_user.username %><i class="material-icons right">arrow_drop_down</i></a></li>
@@ -30,7 +30,7 @@
         <li><a href='/ticks'>Taxonomy</a></li>
         <li><a href='/pages/geomap'>Geomap</a></li>
         <li><a href='/posts'>Forum</a></li>
-        <li><a href='/pages/contact'>Contact Us</a></li>
+        <li><a href='/contact'>Contact Us</a></li>
         <%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
         <% else %>
        <li><%= link_to 'Login', new_user_session_path  %></li>
