--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -36,15 +36,15 @@
   </div>
 
   <div class="field">
-    <%= f.label :latitude %>
-    <%= f.text_field :latitude %>
+    <%#= f.label :latitude %>
+    <%#= f.text_field :latitude %>
   </div>
 
   <div class="field">
-    <%= f.label :longitude %>
-    <%= f.text_field :longitude %>
+    <%#= f.label :longitude %>
+    <%#= f.text_field :longitude %>
   </div>
-
+<!--
   <div id="somecomponent" style="width: 500px; height: 400px;"></div>
 
 <script>
@@ -86,7 +86,7 @@
 
       );
 
-  </script> </br>
+  </script> </br> -->
 
 
   <div class="actions">
