--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -7,6 +7,7 @@
     <ul class="right hide-on-med-and-down">
       <% if user_signed_in? %>
           <% if current_user.admin? %>
+          <li><a href='/pages/admin_dashboard'>Admin Dashboard</a></li>
           <li><a href='/ticks/new'>Add Ticks</a></li>
           <% end %>
        <li><a href='/ticks'>Taxonomy</a></li>
@@ -26,6 +27,7 @@
         <% if user_signed_in? %>
           <% if current_user.admin? %>
           <li><a href='/ticks/new'>Add Ticks</a></li>
+          <li><a href='/pages/admin_dashboard'>Admin Dashboard</a></li>
           <% end %>
         <li><a href='/ticks'>Taxonomy</a></li>
         <li><a href='/pages/geomap'>Geomap</a></li>
