--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,10 +18,19 @@
 
  @import 'materialize';
 
- body {
+
+
+ footer {
     background-image: url(https://image.ibb.co/g0Ou6Q/grass.jpg);
+    background-position: bottom;
     background-repeat: no-repeat;
-    height: 100%;
+    background-attachment: fixed;
+    color: black;
+
+}
+
+.footer-copyright{
+  color: black;
 }
 
 .capitalize {
