--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,6 @@
     </div>
     </body>
     <footer>
-    <%= render 'partials/footer' %>
+    <%#= render 'partials/footer' %>
     </footer>
   </html>
