--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<div class="container">
-  <h1>Welcome to Ticked</h1>
+<div class="container center">
+    <h1>Welcome to Ticked</h1>
+  <img src="https://image.ibb.co/hiRvfk/cow.png" style="width:304px;height:228px;">
 </div>
