--- a/app/views/pages/geomap.html.erb
+++ b/app/views/pages/geomap.html.erb
@@ -1,6 +1,4 @@
-<h1>Pages#geomap</h1>
-<p>Find me in app/views/pages/geomap.html.erb</p>
-
+<h3>Distribution of Ticks</h3>
 
 <div id="map" style='width: 100%; height: 400px;'>
 
