--- a/app/views/ticks/_form.html.erb
+++ b/app/views/ticks/_form.html.erb
@@ -73,7 +73,7 @@
     <input type="text" id="address" style="width: 300px"/>
   </div>
 
-  <div id="somecomponent" style="width: 500px; height: 400px;"></div>
+  <div id="somecomponent" style="width: 100%; height: 400px;"></div>
 
 <script>
   $( document ).on('turbolinks:load', function() {
