--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container center">
+<div class="container center-align">
     <h1>Welcome to Ticked</h1>
   <img src="https://image.ibb.co/hiRvfk/cow.png" style="width:304px;height:228px;">
 </div>
