--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,9 +18,10 @@
 
  @import 'materialize';
 
- html, body {
-   height: 100%;
- }
+
+ // html {
+ //   font-family: GillSans, Calibri, Trebuchet, sans-serif;
+ // }
 
 .footer-copyright{
   color: black;
