--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,16 +6,19 @@
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-        <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <!-- <script src="/javascripts/gmaps_google.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script> -->
+
         <script src="//maps.google.com/maps/api/js?key=<%=ENV['GOOGLEMAP_SECRET']%>"></script>
-        <script src=“//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js”></script>
+
+        <!-- <script src=“//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js”></script>
         <script src=‘//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js’ type=‘text/javascript’></script> <!-- only if you need custom infoboxes -->
 
     </head>
