--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
     <i class="material-icons">add</i>
 </a>
 <p>
-    Forum to discuss new sightings and realated questions regarding ticks with the community.
+    Forum to discuss new sightings and related questions regarding ticks with the community.
 </p>
 
 <% @posts.each do |post| %>
@@ -36,7 +36,7 @@
           </div>
           <div class="card-action">
               <strong>Posted by:</strong>
-              <a href="#" class="capitalize"><%= post.user.username %></a>
+              <a href="/conversations" class="capitalize"><%= post.user.username %></a>
           </div>
 
 
