--- a/app/views/ticks/index.html.erb
+++ b/app/views/ticks/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <% if @ticks.blank? %>
-  <h5>There are no results that match your search: <%= params[:search] %>.</h5>
+  <h5>There are no results that match your search: <%= params[:search] %></h5>
 <% end %>
 
 <h3>Ticks</h3>
