--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -8,7 +8,7 @@
       <% if user_signed_in? %>
           <% if current_user.admin? %>
           <li><a href='/pages/admin_dashboard'>Admin Dashboard</a></li>
-          <li><a href='/ticks/new'>Add Ticks</a></li>
+          <li><a href='/ticks/new' data-turbolinks="false">Add Ticks</a></li>
           <% end %>
        <li><a href='/ticks'>Taxonomy</a></li>
        <li><a href='/pages/geomap' data-turbolinks="false">Geomap</a></li>
@@ -44,6 +44,7 @@
 <!-- dropdown structure -->
 <ul id="dropdown1" class="dropdown-content">
  <li><a href="#!">Profile</a></li>
+ <li><a href='/conversations'>Messages</a></li>
  <li class="divider"></li>
  <li>
    <% if user_signed_in? %>
