--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -16,7 +16,7 @@
        <li><a href='/contact'>Contact Us</a></li>
 
        <!-- dropdown trigger -->
-       <li><a class="dropdown-button capitalize" href="#!" data-activates="dropdown1"><%= current_user.username %><i class="material-icons right">arrow_drop_down</i></a></li>
+       <li><a class="dropdown-button capitalize" data-activates="dropdown1"><%= current_user.username %><i class="material-icons right">arrow_drop_down</i></a></li>
        <% else %>
        <li><%= link_to 'Login', new_user_session_path  %></li>
        <% end %>
