--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,10 @@
     <head>
         <title>Ticked</title>
         <%= csrf_meta_tags %>
-        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+         <!-- 'data-turbolinks-track': 'reload' - turned off -->
+        <%= stylesheet_link_tag    'application', media: 'all'%>
+        <%= javascript_include_tag 'application'%>
+
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans" rel="stylesheet">
@@ -21,6 +23,7 @@
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script> -->
 
         <script src="//maps.google.com/maps/api/js?key=<%=ENV['GOOGLEMAP_SECRET']%>"></script>
+
 
         <!-- <script src=“//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js”></script>
         <script src=‘//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js’ type=‘text/javascript’></script> <!-- only if you need custom infoboxes -->
