--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -8,15 +8,15 @@
       <% if user_signed_in? %>
           <% if current_user.admin? %>
           <li><a href='/pages/admin_dashboard'>Admin Dashboard</a></li>
-          <li><a href='/ticks/new' data-turbolinks="false">Add Ticks</a></li>
+          <li><a href='/ticks/new'>Add Ticks</a></li>
           <% end %>
        <li><a href='/ticks'>Taxonomy</a></li>
-       <li><a href='/pages/geomap' data-turbolinks="false">Geomap</a></li>
+       <li><a href='/pages/geomap'>Geomap</a></li>
        <li><a href='/posts'>Forum</a></li>
        <li><a href='/contact'>Contact Us</a></li>
 
        <!-- dropdown trigger -->
-       <li><a class="dropdown-button capitalize" data-activates="dropdown1"><%= current_user.username %><i class="material-icons right">arrow_drop_down</i></a></li>
+       <li><a class="dropdown-button capitalize" data-activates="dropdown1" data-beloworigin="true"><%= current_user.username %><i class="material-icons right">arrow_drop_down</i></a></li>
        <% else %>
        <li><%= link_to 'Login', new_user_session_path  %></li>
        <% end %>
@@ -43,7 +43,6 @@
 
 <!-- dropdown structure -->
 <ul id="dropdown1" class="dropdown-content">
- <li><a href="#!">Profile</a></li>
  <li><a href='/conversations'>Messages</a></li>
  <li class="divider"></li>
  <li>
