--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -27,7 +27,7 @@
 
   <div class="field">
     <%= f.label :description %>
-    <%= f.text_field :description %>
+    <%= f.text_area :description, :id => "textarea1", :class => "materialize-textarea"%>
   </div>
 
   <div class="field">
